syntax = "proto3";
package bass;

option go_package = "pkg/proto";

message Value {
  oneof value {
    Null null = 1;
    Bool bool = 2;
    Int int = 3;
    String string = 4;
    Secret secret = 5;
    Array array = 6;
    Object object = 7;
    FilePath file_path = 8;
    DirPath dir_path = 9;
    HostPath host_path = 10;
    FSPath fs_path = 11;
    Thunk thunk = 12;
    ThunkPath thunk_path = 13;
    CommandPath command_path = 14;
  };
};

message Thunk {
  ThunkImage image = 1;
  bool insecure = 2;
  ThunkCmd cmd = 3;
  repeated Value args = 4;
  repeated Value stdin = 5;
  repeated Binding env = 6;
  ThunkDir dir = 7;
  repeated ThunkMount mounts = 8;
  repeated Binding labels = 9;
};

message ThunkImage {
  oneof image {
    ThunkImageRef ref = 1;
    Thunk thunk = 2;
  };
}

message ThunkImageRef {
  Platform platform = 1;
  oneof source {
    string repository = 2;
    ThunkPath file = 3;
  };
  optional string tag = 4;
  optional string digest = 5;
};

message Platform {
  string os = 1;
  string arch = 2;
};

message ThunkCmd {
  oneof cmd {
    CommandPath command = 1;
    FilePath file = 2;
    ThunkPath thunk = 3;
    HostPath host = 4;
    FSPath fs = 5;
  };
};

message ThunkDir {
  oneof dir {
    DirPath local = 12;
    ThunkPath thunk = 13;
    HostPath host = 14;
  };
};

message ThunkMountSource {
  oneof source {
    ThunkPath thunk = 1;
    HostPath host = 2;
    FSPath fs = 3;
    CachePath cache = 4;
    Secret secret = 5;
  };
};

message ThunkMount {
  ThunkMountSource source = 1;
  FilesystemPath target = 2;
};

message Array {
  repeated Value values = 1;
};

message Object {
  repeated Binding bindings = 1;
};

message Binding {
  string name = 1;
  Value value = 2;
};

message Null {};

message Bool {
  bool inner = 1;
};

message Int {
  int64 inner = 1;
};

message String {
  string inner = 1;
}

message CachePath {
  string id = 1;
  FilesystemPath path = 2;
};

message Secret {
  string name = 1;
  bytes value = 2;
};

message CommandPath {
  string command = 1;
};

message FilePath {
  string path = 1;
};

message DirPath {
  string path = 1;
};

message FilesystemPath {
  oneof path {
    FilePath file = 1;
    DirPath dir = 2;
  };
};

message ThunkPath {
  Thunk thunk = 1;
  FilesystemPath path = 2;
};

enum EmbedFS {
  INVALID = 0;
  STDLIB = 1;
  PKG = 2;
  TESTDATA = 3;
  DEMOS = 4;
};

message FSPath {
  string id = 1;
  FilesystemPath path = 2;
};

message HostPath {
  string context = 1;
  FilesystemPath path = 2;
};
